# example-rust-signed-xml

./: Cargo.toml  readme.md
src/: crypto.rs  error.rs  lib.rs  main.rs  xml.rs
test/data/: sample-input.xml
